# pipelines-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
demos/: demo-all.sh  demo-change-rename.sh  demo-change-strip-prefix.sh  demo-count-filtered.sh  demo-count-records.sh  demo-duplicate-double.sh  demo-duplicate-triple.sh  demo-engineers-only.sh  demo-filter-sales.sh  demo-literal-footer.sh  demo-literal-header-footer.sh  demo-locate-errors.sh  demo-locate-field.sh  demo-lower-case.sh  demo-multi-filter-count.sh  demo-multi-locate-select.sh  demo-multi-transform.sh  demo-nlocate-exclude.sh  demo-non-marketing.sh  demo-reverse-text.sh  demo-sales-report.sh  demo-skip-take-window.sh  demo-top-five.sh  demo-upper-case.sh
docs/: compare-implementations.md  index.html  multi-stage-pipes-design.md  notes.txt  plan.md  prd.md  status.md  user-manual.md  wasm-ui-27c0194439140c2a_bg.wasm  wasm-ui-7cf9a7071ecf5539.js  wasm-ui-7cf9a7071ecf5539_bg.wasm  wasm-ui-98b9e2ab5debac9e.js  wasm-ui-98b9e2ab5debac9e_bg.wasm  wasm-ui-aa2e62fea6ede266_bg.wasm
documentation/: plan.md
pages/: index.html  wasm-ui-29f21ae8ae500ee5_bg.wasm  wasm-ui-2c975b09d3693a29_bg.wasm  wasm-ui-9ee9488f20a0df68_bg.wasm  wasm-ui-c042b25f7e2e4c1f.js  wasm-ui-c042b25f7e2e4c1f_bg.wasm  wasm-ui-c8a2629462bc0719_bg.wasm
scripts/: benchmark.sh  build-rat.sh  build-wasm.sh  build.sh  serve-rat.sh  serve-wasm.sh  serve.sh
specs/: engineers-only.pipe  filter-sales.pipe  input-fixed-80.data  (+3 more)
wasm-ui/: Cargo.toml  build.rs  index.html
wasm-ui/src/: app.rs  components.rs  debugger.rs  dsl.rs  lib.rs
(+52 files in other folders)
