[package]
name = "wasm-ui"
version = "0.1.0"
edition = "2024"
description = "Web UI for pipelines-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pipelines-rs = { path = ".." }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "HtmlTextAreaElement"] }
gloo = "0.11"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
